--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "- Estefanía Antonio Villaseca\r - Miranda Eugenia Colorado Arróniz\r - Alejandro Kong Montoya\r - Sofía Zugasti Delgado",
   "main": "index.js",
   "directories": {
-    "test": "jest"
+    "test": "tests"
   },
   "scripts": {
     "test": "jest"
